--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+
     <header class="header__container">
       <img
         src="./assets/img/Logo.svg"
@@ -20,6 +21,7 @@
         class="header__container__img"
       />
     </header>
+
     <main class="container__content">
       <section class="container__content__primary__section">
         <h1 class="input__primary__content__text">Digite seu texto</h1>
@@ -29,24 +31,34 @@
             src="./assets/img/bi_exclamation-circle-fill.svg"
             alt="Ícone de conteúdo informativo"
           />
-          <p>Apenas letras minúsculas e sem acento.</p>
+          <p class="primary__content__text__info">Apenas letras minúsculas e sem acento.</p>
         </div>
 
         <section class="primary__content__container__btns">
-          <div class="btn" id="btn__decript">Criptografar</div>
-          <div class="btn" id="btn__encript">Descriptografar</div>
+          <div class="primary__content__btn" id="btn__encript">
+            <p class="primary__content__btn__text">Criptografar</p>
+          </div>
+          <div class="primary__content__btn" id="btn__decript">
+            <p class="primary__content__btn__text">Descriptografar</p> 
+          </div>
         </section>
+
       </section>
 
-      <section class="containar__content__secondary__section">
+      <section  class="containar__content__secondary__section">
+
         <div class="content__secondary__decripted">
           <p>Nenhuma Mensagem encontrada</p>
           <div class="content__secondary__copy__button">Copiar</div>
         </div>
+
       </section>
+
     </main>
+
     <footer class="footer__container">
       <p class="footer__container__developed">Desenvolvido por Robson Moura</p>
+
     </footer>
 
     <script src="./assets/js/main.js"></script>
