feat: Implementing secondary content box  and copy button design

--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
       <section  class="containar__content__secondary__section">
 
         <div class="content__secondary__decripted">
-          <p>Nenhuma Mensagem encontrada</p>
-          <div class="content__secondary__copy__button">Copiar</div>
+          
+          <p class="content__secondary__text">
+            <span>Nenhuma mensagem encontrada</span><br><br>
+            Digite um texto que você deseja criptografar ou descriptografar.</p>
+          <div class="primary__content__btn" id="secondary__content__copy__btn">
+            <p class="primary__content__btn__text">Copiar</p>
+          </div>
         </div>
 
       </section>
