feat: Add Media-Query and concluded reposdive designs to mobile, table and desktop.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Decodificador de Texto</title>
 
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/mediaQuery.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -45,10 +46,10 @@
 
       </section>
 
-      <section  class="containar__content__secondary__section">
+      <section  class="container__content__secondary__section">
 
         <div class="content__secondary__decripted">
-          
+          <img class="content__secondary__decripted__img" src="./assets/img/menino-com-uma-lupa-desenho.svg" alt="Desenho de um menino procurando a mensgem com uma lupa">
           <p class="content__secondary__text">
             <span>Nenhuma mensagem encontrada</span><br><br>
             Digite um texto que você deseja criptografar ou descriptografar.</p>
