feat: Our configured the textarea for the user texts inputs.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
     <main class="container__content">
       <section class="container__content__primary__section">
-        <h1 class="input__primary__content__text">Digite seu texto</h1>
+
+        <form class="container__content__input__container">
+         <textarea spellcheck="none" class="textarea__primary__content" name="user_text" id="user_text" cols="50" rows="10" placeholder="Digite seu texto aqui"></textarea>
+        </form>
+        
 
         <div class="container__primary__content__info">
           <img
