feat: Create functions : isTextAreaEmpty, removeWordOfString
Implementing listenerEvent of : btnDescriptografar, btnCopy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header__container">
       <img
         src="./assets/img/Logo.svg"
-        alt="Logo da Alura"
+        alt="Logo da Alura em forma de A na cor azul."
         class="header__container__img"
       />
     </header>
@@ -78,7 +78,7 @@
           </p>
         </div>
         <div class="primary__content__btn" id="secondary__content__copy__btn">
-          <p class="primary__content__btn__text">Copiar</p>
+          <p class="primary__content__btn__text" id="text__copy">Copiar</p>
         </div>
       </section>
     </main>
